# ocelot

./: LICENSE  default.nix
emacs/: default.nix  ocelot-defaults.el  ocelot-emacs-layer.nix  ocelot-emacs.nix  ocelot-start.el  overlay.nix
emacs/distro/: default.nix  prelude.nix  spacemacs.nix
emacs/distro/spacemacs-layers/ocelot/: README.org  packages.el
emacs/epkgs/: elpa-pinned.nix  evil-unimpaired.nix  help-fns-plus.nix  hide-comnt.nix  highlight.nix  info-plus.nix  melpa-pinned.nix  ocelot-epkg.nix  ocelot-installer-config.nix  ocelot-system.nix  org-pinned.nix
emacs/epkgs/ocelot/: ocelot-core.el  ocelot-disk-utils.el  ocelot-logging.el  ocelot-mounted.el  ocelot-pkg.el  ocelot-session.el
emacs/epkgs/ocelot-system/: ocelot-core-patches.el  ocelot-defaults.el  ocelot-evil-defaults.el  ocelot-installer.el  ocelot-patches.el  ocelot-startup.el
installer/: live-system.nix  make-image.nix  make-live.org  mkimage.sh
security/: default.nix  login-ocelot-theme.el
security/olman/: .dir-locals.el  Cargo.toml  cargo-devenv.sh  shell.nix
security/olman/src/: config.rs  fperms.rs  tty.rs
ui/: default.nix  disk-mounting.nix  gui.nix  keyboard.nix  locker.nix  ocelot-exwm.nix
ui/configs/: dot_xscreensaver
ui/login/: default.nix  login.el  olman.nix
ui/login/olman/src/: credentials.rs  main.rs  pam.rs
ui/login/olman/utmpx/: Cargo.toml
ui/login/olman/utmpx/src/: lib.rs
